Remove course code from title and header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EE 290 / 194: Scalable AI — Spring 2026 | UC Berkeley</title>
+    <title>Scalable AI — Spring 2026 | UC Berkeley</title>
     <style>
         * {
             margin: 0;
@@ -372,7 +372,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>EE 290 / 194: Scalable AI</h1>
+            <h1>Scalable AI</h1>
             <p class="semester">Bridging Theory, Understanding, and Practice</p>
             <p class="semester">Spring 2026 | UC Berkeley</p>
             <p class="subtle">Large-Scale AI as an End-to-End Engineering Discipline</p>
@@ -443,7 +443,7 @@
 
                     <div class="item">
                         <div class="label">Resources</div>
-                        <div class="value">Website: TBD<br>Forum (Ed): TBD<br>Gradescope: TBD</div>
+                        <div class="value">Forum (Ed): TBD<br>Gradescope: TBD</div>
                     </div>
                 </div>
 
