--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <thead>
                         <tr>
                             <th style="width: 14%;">Date</th>
-                            <th style="width: 52%;">Lecture / Events</th>
+                            <th style="width: 52%;">Lectures / Events</th>
                             <th style="width: 24%;">Recommended Readings</th>
                             <th style="width: 10%;">Notes</th>
                         </tr>
