--- a/index.html
+++ b/index.html
@@ -734,10 +734,10 @@
                     </div>
 
                     <div class="item">
-                        <div class="label">Teaching Staff</div>
+                        <div class="label">Teaching and Support Staff</div>
                         <div class="value">
-                            <a href="https://haochengxi.github.io/" target="_blank" rel="noopener noreferrer">Haocheng Xi</a>;
-                            Paul Zhao; Venkat Srinivasan
+                            <a href="https://haochengxi.github.io/" target="_blank" rel="noopener noreferrer">Haocheng Xi (Teaching)</a>;
+                            Paul Zhao (Teaching), Venkat Srinivasan (Support)
                             <div class="mini">Full staff cards + photos in <a href="#team">Course Team</a>.</div>
                         </div>
                     </div>
