--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
             <div class="info-section">
                 <h3>Instructors</h3>
                 <div class="people-grid">
-                    <a class="person-card" href="https://www2.eecs.berkeley.edu/Faculty/Homepages/sahai.html" target="_blank" rel="noopener noreferrer">
+                    <a class="person-card" href="https://vcresearch.berkeley.edu/faculty/anant-sahai" target="_blank" rel="noopener noreferrer">
                         <img src="assets/team/anant_sahai.jpg" alt="Prof. Anant Sahai" loading="lazy">
                         <div class="person-meta">
                             <div class="person-name">Prof. Anant Sahai</div>
@@ -677,26 +677,26 @@
                         </div>
                     </a>
 
-                    <div class="person-card disabled" aria-label="Paul Zhao (link TBD)">
-                        <img src="assets/team/paul_zhao.png" alt="Paul Zhao" loading="lazy">
+                    <a class="person-card" href="https://zhouzypaul.github.io/" target="_blank" rel="noopener noreferrer">
+                        <img src="assets/team/paul_zhao.png" alt="Paul Zhou" loading="lazy">
                         <div class="person-meta">
-                            <div class="person-name">Paul Zhao</div>
-                            <div class="person-role">GSI <span class="mini">• webpage link TBD</span></div>
+                            <div class="person-name">Paul Zhou</div>
+                            <div class="person-role">GSI</div>
                             <div class="person-affil">UC Berkeley</div>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
-                <h3>Support</h3>
+                <h3>NVIDIA infrastructure and technology</h3>
                 <div class="people-grid">
-                    <div class="person-card disabled" aria-label="Venkat Srinivasan (link TBD)">
+                    <a class="person-card" href="https://www.linkedin.com/in/venkatks/" target="_blank" rel="noopener noreferrer">
                         <img src="assets/team/venkat.png" alt="Venkat Srinivasan" loading="lazy">
                         <div class="person-meta">
                             <div class="person-name">Venkat Srinivasan</div>
-                            <div class="person-role">Support <span class="mini">• webpage link TBD</span></div>
-                            <div class="person-affil">Course infrastructure &amp; ops</div>
+                            <div class="person-role">NVIDIA infrastructure and technology</div>
+                            <div class="person-affil">NVIDIA</div>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
                 <p class="note" style="margin-top: 14px;">Staff list may expand; check Ed for updates.</p>
@@ -728,7 +728,7 @@
                     <div class="item">
                         <div class="label">Instructors</div>
                         <div class="value">
-                            <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/sahai.html" target="_blank" rel="noopener noreferrer">Anant Sahai</a>;
+                            <a href="https://vcresearch.berkeley.edu/faculty/anant-sahai" target="_blank" rel="noopener noreferrer">Anant Sahai</a>;
                             <a href="https://people.eecs.berkeley.edu/~jiantao/" target="_blank" rel="noopener noreferrer">Jiantao Jiao</a>
                         </div>
                     </div>
@@ -736,8 +736,9 @@
                     <div class="item">
                         <div class="label">Teaching and Support Staff</div>
                         <div class="value">
-                            <a href="https://haochengxi.github.io/" target="_blank" rel="noopener noreferrer">Haocheng Xi (Teaching)</a>;
-                            Paul Zhao (Teaching), Venkat Srinivasan (Support)
+                            <a href="https://haochengxi.github.io/" target="_blank" rel="noopener noreferrer">Haocheng Xi</a>;
+                            <a href="https://zhouzypaul.github.io/" target="_blank" rel="noopener noreferrer">Paul Zhou</a>;
+                            <a href="https://www.linkedin.com/in/venkatks/" target="_blank" rel="noopener noreferrer">Venkat Srinivasan</a> (NVIDIA infrastructure and technology)
                             <div class="mini">Full staff cards + photos in <a href="#team">Course Team</a>.</div>
                         </div>
                     </div>
@@ -771,7 +772,7 @@
                 </div>
 
                 <h4>Communication</h4>
-                <p><strong>Ed only.</strong> Please post all course questions on Ed (TBD). We do not use Slack or other channels for course Q&amp;A.</p>
+                <p><strong>Ed only.</strong> Please post all course questions on Ed (https://edstem.org/us/courses/52680/discussion/). We do not use Slack or other channels for course Q&amp;A.</p>
 
                 <h4>Compute</h4>
                 <p>Groups of <strong>4–6</strong>. Each group receives <strong>1 H100 node (8×H100)</strong> for the semester (8 total nodes on GCP). Each group is assigned a single static external IP address for SSH access.</p>
@@ -1507,7 +1508,7 @@
                 <h3>Infrastructure Notes</h3>
                 <p>This course uses shared GPU infrastructure. For access/quota/networking issues, post on Ed and include timestamps, job IDs, logs, and a short repro description. Multi-node experiments require coordinating with another team to share nodes for a bounded window of time.</p>
 
-                <p class="mini">Submission platform (Gradescope): all written and code submissions are via Gradescope (TBD), unless explicitly stated otherwise. Oral presentations/checkoffs require sign-up and in-person attendance.</p>
+                <p class="mini">Submission platform (Gradescope): all written and code submissions are via Gradescope (4DDRWY), unless explicitly stated otherwise. Oral presentations/checkoffs require sign-up and in-person attendance.</p>
             </div>
         </section>
 
